--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>aerial_manipulation_sim</name>
+  <name>rotor_tm</name>
   <version>0.0.0</version>
-  <description>The aerial_manipulation_sim package</description>
+  <description>The rotor_tm package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
