fix the convex optimization issue

--- a/rotor_tm_msgs/CMakeLists.txt
+++ b/rotor_tm_msgs/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(rotor_tm)
+project(rotor_tm_msgs)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 # add_compile_options(-std=c++11)
@@ -13,15 +13,20 @@ find_package(catkin REQUIRED COMPONENTS
   sensor_msgs
   geometry_msgs
   std_msgs
-  std_srvs
   message_generation)
 
-add_service_files(
-  DIRECTORY srv
+add_message_files(DIRECTORY msg
   FILES
-    Vec4.srv
-    Circle.srv
-)
+  AuxCommand.msg
+  Corrections.msg
+  OutputData.msg
+  PositionCommand.msg
+  FMCommand.msg
+  RPMCommand.msg
+  SO3Command.msg
+  CenPL_Command.msg
+  StatusData.msg
+  TRPYCommand.msg)
 
 generate_messages(
   DEPENDENCIES geometry_msgs std_msgs)
@@ -40,13 +45,6 @@ catkin_package(
 ###########
 ## Build ##
 ###########
-
-## Specify additional locations of header files
-## Your package locations should be listed before other locations
-include_directories(
-# include
-# ${catkin_INCLUDE_DIRS}
-)
 
 
 ## Mark cpp header files for installation
