preliminary ptmass sim build

--- a/rotor_tm_config/config/attach_mechanism/ptmass_cable_mechanism.yaml
+++ b/rotor_tm_config/config/attach_mechanism/ptmass_cable_mechanism.yaml
@@ -1,5 +1,5 @@
 # Define the type of the connection
-type: "Cable" 
+mechanism_type: "Cable" 
 
 # Define the total number of robots
 num_of_robots: 1
