add 6/4 cable sim, sphere for ptmass, GUI, updated README 0.3

--- a/rotor_tm_config/config/attach_mechanism/5_robots_rigid_links_mechanism.yaml
+++ b/rotor_tm_config/config/attach_mechanism/5_robots_rigid_links_mechanism.yaml
@@ -1,5 +1,5 @@
 # Define the type of the connection
-type: "Rigid Link" 
+mechanism_type: "Rigid Link" 
 
 # Define the total number of robots
 num_of_robots: 5
