--- a/rotor_tm_keyboard2wrench/CMakeLists.txt
+++ b/rotor_tm_keyboard2wrench/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(keyboard2wrench)
+project(rotor_tm_keyboard2wrench)
 
 find_package(catkin REQUIRED)
 
