--- a/rotor_tm_sim/package.xml
+++ b/rotor_tm_sim/package.xml
@@ -37,6 +37,7 @@
   <build_depend>sensor_msgs</build_depend>
   <build_depend>message_generation</build_depend>
   <build_depend>std_srvs</build_depend>
+  <build_depend>quadrotor_msgs</build_depend>
 
   <!-- Dependencies needed after this package is compiled. -->
   <exec_depend>rospy</exec_depend>
@@ -46,6 +47,7 @@
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>message_runtime</exec_depend>
   <exec_depend>std_srvs</exec_depend>
+  <exec_depend>quadrotor_msgs</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
