put robot list in the attach mechanism yaml files

--- a/rotor_tm_config/config/attach_mechanism/cable/6_robots_fedex_box_0_5m.yaml
+++ b/rotor_tm_config/config/attach_mechanism/cable/6_robots_fedex_box_0_5m.yaml
@@ -15,3 +15,6 @@ rho:
 
 # Define the cable length
 cable_length: [0.5,0.5,0.5,0.5,0.5,0.5]
+
+# Define the types of robots attach to the payload
+robot_list: ["snapdragonfly","snapdragonfly","snapdragonfly","snapdragonfly","snapdragonfly","snapdragonfly"]
