--- a/rotor_tm_config/config/attach_mechanism/cable/1_robot_point_mass_0_5m.yaml
+++ b/rotor_tm_config/config/attach_mechanism/cable/1_robot_point_mass_0_5m.yaml
@@ -10,3 +10,6 @@ rho:
 
 # Define the cable length
 cable_length: [0.5]
+
+# Define the types of robots attach to the payload
+robot_list: ["snapdragonfly"]
