heterogenous team setup down, transport payload in straight line

--- a/rotor_tm_config/config/uav_params/hummingbird.yaml
+++ b/rotor_tm_config/config/uav_params/hummingbird.yaml
@@ -7,6 +7,6 @@ max_angle: 80 #degree
 num_props: 4
 max_rpm: 7500
 min_rpm: 1500
-motor_coefficient: 5.55e-8
+motor_coefficients: 5.55e-8
 
 mesh_path: "package://rotor_tm/mesh/uav/hummingbird.mesh"
