add uav_name for heterogeneous robots set up

--- a/rotor_tm_config/config/uav_params/hummingbird.yaml
+++ b/rotor_tm_config/config/uav_params/hummingbird.yaml
@@ -1,3 +1,4 @@
+uav_name: "hummingbird"
 mass: 0.5
 inertia: {Ixx: 2.64e-3, Ixy: 0.0, Ixz: 0.0, Iyx: 0.0, Iyy: 2.64e-3, Iyz: 0.0, Izx: 0.0, Izy: 0.0, Izz: 4.96e-3}
 arm_length: 0.17
