--- a/rotor_tm_config/config/uav_params/snapdragonfly_bullnose_prop.yaml
+++ b/rotor_tm_config/config/uav_params/snapdragonfly_bullnose_prop.yaml
@@ -1,3 +1,4 @@
+uav_name: "dragonfly"
 mass: 0.25
 inertia: {Ixx: 0.000601, Ixy: 0.0, Ixz: 0.0, Iyx: 0.0, Iyy: 0.000589, Iyz: 0.0, Izx: 0.0, Izy: 0.0, Izz: 0.001076}
 arm_length: 0.1075 
